src/app/pages/rewards/rewards.component.scss
*{
    scrollbar-width: none;

}

option{
    width: 100%;
    background: #ddd;
    position: absolute;
    top: calc(100% + 0.5rem);
    left: 0;
    padding: 1rem;
    margin: 0;
    box-sizing: border-box;
    border-radius: 5px;
    max-height: 200px;
    overflow-y: auto;
}

#cont {
    background-image: url("/assets/images/background.png");
    overflow: scroll;
    width: 100vw;
   
}

.mytabs {
    display: flex;
    flex-wrap: wrap;
    width: 99%;
    // margin: 50px auto;
    padding: 0;
    margin: 0;

}

.search{
    margin: 7px;
    float: right;
    padding: 2px;
}
// .dataTables_wrapper .dataTables_filter input {
//     position: absolute;
//     right: 0;
//     border: 1px solid #aaa;
//     border-radius: 3px;
//     padding: 5px;
//     background-color: transparent;
//     margin-left: 3px;
// }


.example-additional-selection {
    opacity: 0.75;
    font-size: 0.75em;
  }

hr {
    margin: 0;
}

.rewardpoints {
    position: absolute;
    margin: 0;
    right: 95px;
    margin-top: 22px !important;

}

.totalpoints {
    position: absolute;
    margin: 0;
    right: 55px;
    margin-top: 22px !important;
    font-size: 15px;
    font-weight: 700;
}

.mytabs input[type="radio"] {
    display: none;
}

.reward_tab {
    padding: 12px;
    background: #EFF2F6;
    font-weight: 500;
    // font-family: in;
    font-size: 14px;
    margin: 0;
    width: 150px;
    text-align: center;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    margin-right: 5px;
    border: 1px solid #DDDDDD;

}

.passbook_tab{
    padding: 12px;
    background: #EFF2F6;
    font-weight: 500;
    // font-family: in;
    font-size: 14px;
    margin: 0;
    width: 150px;
    text-align: center;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    margin-right: 5px;
    border: 1px solid #DDDDDD;
}
.mytabs .tab {
    width: 99%;
    padding: 20px;
    background: white;
    order: 1;
    display: none;
    min-height: 69vh;
}

.mytabs .tab h2 {
    font-size: 3em;
}

.mytabs input[type='radio']:checked+label+.tab {
    display: block;

}

.mytabs input[type="radio"]:checked+label {
    background-color:var(--myvar);
    // background: var(--myvar !important);
    color: #DDDDDD;
}

.mat-tab-label {
    border-bottom: 2px solid #DCDCDC;
    // width: 100%;
    font-size: 16px;
    color: #555555;
}

.mat-tab-label.mat-tab-label-active {
    min-width: 25px !important;
    padding: 5px;
    background-color: transparent;
    color: #342319;
    font-family: Roboto;
    font-size: 16px;
    font-weight: 700;
    border-bottom: 2px solid var(--myvar);
    ;
}

.mat-card {
    position: absolute;
    padding: 16px;
    background: #FFFFFF;
    border-radius: 4px;
    margin: 7px;
    height: auto;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
}

.col-md-3 {
    margin-top: 10px;
}

.col-sm-6 {
    margin-top: 10px;

}
.product_image_div{
    display: flex;
    justify-content: center;
}
.productimage {
 
    width: 30%;
 
}

.product_description {
    font-family: 'Inter';
    width: 100%;
    font-size: 14px;
    text-align: center;
    margin-top: 1rem;
    font-weight: 600;
    color: #000000;
}

.product_cost {
  width: 100%;
  text-align: center;
  margin-top: 1rem;
  font-size: 18px;
  font-weight: 600;
  color: #000000;
}


// .product_cost {
//     text-align: center;
//     font-weight: 700;
//     letter-spacing: -0.02em;
//     font-size: 18px;
//     margin-top: 10px;
// }

.btn_div {
    text-align: center;
}

.redeem_btn {
    border-radius: 5px;
    height: 40px;
    border: 1.8px solid #F7EA2C;
    background: white;
    width: 105px;
    font-size: 13px;
    margin-top: 1rem;
}

// Redemption History
.form-select{
    width: 10%;
    float: right;
    margin: 10px;
    font-size: 12px;
    color: #000000;
    background-color: #F2F2F2;
    border: none;
    height: 46px;
    position: absolute;
    right: 0;
    z-index: 10;
}



.redemption_card{
  
    display: block;
    position: relative;
    height: fit-content;
    margin-top: 15px;
}

.redemption_card_div{
    margin-top: 69px;

}

.redemption_card_div_redemption_organisation{
    margin-top: 69px;
}

.redemption_card_redemption_organisation{
  
    display: inline;
    position: relative;
    height: fit-content;
    width: 50%;
    margin-top: 15px;
}

.product_description_redemption_organisation{
    width: 100%;
    font-size: 14px;
    text-align: center;
    margin-top: 7.3rem;
}

.product_cost_redemption_organisation{
    text-align: center;
    font-weight: 700;
    letter-spacing: -0.02em;
    font-size: 18px;
    margin-top: 10px;

}
.coupon_id{
    

height: 31px;
margin-left: 40px;
top: 160px;
font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 14px;
line-height: 17px;
display: flex;
align-items: center;
text-align: center;

color: #000000;
}

.coupon_id_number{
    margin-left: 6px;
font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 14px;
line-height: 17px;
display: flex;
align-items: center;
text-align: center;
color: #000000;

}

.product_image_redemption{
    box-sizing: border-box;
    width: 127px;
    height: 127px;
    margin-left: 40px;
    /* top: 213px; */
    border: 0.819768px solid #CFCFCF;
    border-radius: 13.4789px;
}

.coupon_div p{
    display: inline-block;
    margin: 0;
    padding: 2px;
}

.coupon_div{
    margin-left: 40px;
}
.coupon_code{

    float: right;
    font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 14px;
line-height: 17px;
display: flex;
align-items: center;
text-align: center;
color: #000000;
}

.coupon_code_number{
    float: right;
    font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 14px;
line-height: 17px;
display: flex;
align-items: center;
text-align: center;
color: #000000;
}

.details{
    position: absolute;
}
/* ... */

